# opencode-voice

./: .gitignore  BUILDING.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  state.rs
src/app/: approval.rs  mod.rs  recording.rs
src/approval/: matcher.rs  mod.rs  queue.rs  types.rs
src/audio/: capture.rs  mod.rs  wav.rs
src/bridge/: client.rs  events.rs
src/input/: hotkey.rs  hotkey_linux.rs  hotkey_macos.rs  keyboard.rs  mod.rs
src/native/: key-monitor.swift
src/transcribe/: engine.rs  mod.rs  setup.rs
src/ui/: display.rs
tests/: bridge_test.rs  sse_test.rs
